--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "jest": "^26.0.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2"
   }
 }
