--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
+    "test": "jest --watch",
     "server": "nodemon index.js"
   },
   "repository": {
@@ -32,5 +33,9 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
+  },
+
+  "jest" : {
+    "testEnvironment": "node"
   }
 }
