--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest --watch --testTimeout=10000 --runInBand --detectOpenHandles",
     "server": "nodemon index.js"
   },
   "repository": {
