--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --testTimeout=10000 --runInBand --detectOpenHandles",
+    "test": " jest --watch",
     "server": "nodemon index.js"
   },
   "repository": {
@@ -23,9 +23,11 @@
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.4",
+    "pg": "^8.2.1",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
@@ -34,8 +36,7 @@
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   },
-
-  "jest" : {
+  "jest": {
     "testEnvironment": "node"
   }
 }
